--- a/templates/job_adding.html
+++ b/templates/job_adding.html
@@ -6,7 +6,7 @@
     {{ form.hidden_tag() }}
     <p>
         {{ form.job.label }}<br>
-        {{ form.job(class="form-control", type="string") }}<br>
+        {{ form.job(class="form-control") }}<br>
         {% for error in form.job.errors %}
     <div class="alert alert-danger" role="alert">
         {{ error }}
@@ -15,7 +15,7 @@
     </p>
     <p>
         {{ form.team_leader.label }}<br>
-        {{ form.team_leader(class="form-control", type="integer") }}<br>
+        {{ form.team_leader(class="form-control") }}<br>
         {% for error in form.team_leader.errors %}
     <div class="alert alert-danger" role="alert">
         {{ error }}
@@ -24,7 +24,7 @@
     </p>
     <p>
         {{ form.work_hours.label }}<br>
-        {{ form.work_hours(class="form-control", type="integer") }}<br>
+        {{ form.work_hours(class="form-control") }}<br>
         {% for error in form.work_hours.errors %}
     <div class="alert alert-danger" role="alert">
         {{ error }}
@@ -33,7 +33,7 @@
     </p>
     <p>
         {{ form.collaborators.label }}<br>
-        {{ form.collaborators(class="form-control", type="string") }}<br>
+        {{ form.collaborators(class="form-control") }}<br>
         {% for error in form.collaborators.errors %}
     <div class="alert alert-danger" role="alert">
         {{ error }}
