--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 
 {% block content %}
 <h1 align="center">Works log</h1>
+{% if current_user.is_authenticated %}
+<a href="/addjob" class="btn btn-secondary">Добавить работу</a>
+{% endif %}
 {% for i in js %}
 {% set teamlead = tl[i.id - 1] %}
 <h3>Action №{{i.id}}</h3>
@@ -18,9 +21,19 @@
   <td>{{teamlead}}</td>
   <td>{{i.work_hours}}</td>
   <td>{{i.collaborators}}</td>
-  <td>{{i.is_finished}}</td>
+  {% if i.is_finished %}
+  <td style="background-color: #00db6a;">Is finished</td>
+  {% else %}
+  <td>Is not finished</td>
+  {% endif %}
  </tr>
 </table>
+<br>
+{% if current_user.is_authenticated and (teamlead.split()[1] == current_user.name or current_user.position.lower() in ['captain', 'капитан']) %}
+<a href="/edit_job/{{ i.id }}" class="btn btn-warning">Edit job</a>
+<a href="/delete_job/{{ i.id }}" class="btn btn-danger">Delete</a>
+{% endif %}
+<br>
 <br>
 {% endfor %}
 {% endblock %}
