--- a/templates/register.html
+++ b/templates/register.html
@@ -86,6 +86,6 @@
         {% endfor %}
     </p>
     <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
-    {{message}}
+    <div>{{ message }}</div>
 </form>
 {% endblock %}
