--- a/templates/index.html
+++ b/templates/index.html
@@ -2,31 +2,31 @@
 
 {% block content %}
 <h1 align="center">Works log</h1>
-{% if current_user.is_authenticated %}
+{% if current_user.is_authenticated and current_user.position.lower() in ['captain', 'капитан'] %}
 <a href="/addjob" class="btn btn-secondary">Добавить работу</a>
 {% endif %}
 {% for i in js %}
 {% set teamlead = tl[i.id - 1] %}
 <h3>Action №{{i.id}}</h3>
 <table>
-<tr>
-  <th>Title of activity</th>
-  <th>Team leader</th>
-  <th>Duration</th>
-  <th>List of collaborators</th>
-  <th>Is finished</th>
-  </tr>
- <tr>
-  <td>{{i.job}}</td>
-  <td>{{teamlead}}</td>
-  <td>{{i.work_hours}}</td>
-  <td>{{i.collaborators}}</td>
-  {% if i.is_finished %}
-  <td style="background-color: #00db6a;">Is finished</td>
-  {% else %}
-  <td>Is not finished</td>
-  {% endif %}
- </tr>
+    <tr>
+        <th>Title of activity</th>
+        <th>Team leader</th>
+        <th>Duration</th>
+        <th>List of collaborators</th>
+        <th>Is finished</th>
+    </tr>
+    <tr>
+        <td>{{i.job}}</td>
+        <td>{{teamlead}}</td>
+        <td>{{i.work_hours}}</td>
+        <td>{{i.collaborators}}</td>
+        {% if i.is_finished %}
+        <td style="background-color: #00db6a;">Is finished</td>
+        {% else %}
+        <td>Is not finished</td>
+        {% endif %}
+    </tr>
 </table>
 <br>
 {% if current_user.is_authenticated and (teamlead.split()[1] == current_user.name or current_user.position.lower() in ['captain', 'капитан']) %}
