--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
             <a href="/register" class="btn btn-primary">Зарегестрироваться</a>
             <a href="/login" class="btn btn-success">Войти</a>
         </div>
+        <a style="padding-right: 50px">Mars One</a>
         {% endif %}
     </nav>
     </header>
