--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 <h1 align="center">Works log</h1>
-{% if current_user.is_authenticated and current_user.position.lower() in ['captain', 'капитан'] %}
+{% if current_user.is_authenticated %}
 <a href="/addjob" class="btn btn-secondary">Добавить работу</a>
+<a href="/departments" class="btn btn-secondary">Перейти к департаментам</a>
 {% endif %}
 {% for i in js %}
 {% set teamlead = tl[i.id - 1] %}
