--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,11 @@
 <a href="/addjob" class="btn btn-secondary">Добавить работу</a>
 <a href="/departments" class="btn btn-secondary">Перейти к департаментам</a>
 {% endif %}
+<br>
+<br>
 {% for i in js %}
 {% set teamlead = tl[i.id - 1] %}
+{% set category = cs[i.id - 1] %}
 <h3>Action №{{i.id}}</h3>
 <table>
     <tr>
@@ -15,13 +18,15 @@
         <th>Team leader</th>
         <th>Duration</th>
         <th>List of collaborators</th>
+        <th>Hazard category</th>
         <th>Is finished</th>
     </tr>
     <tr>
         <td>{{i.job}}</td>
         <td>{{teamlead}}</td>
-        <td>{{i.work_hours}}</td>
+        <td>{{i.work_hours}} hours</td>
         <td>{{i.collaborators}}</td>
+        <td>{{ category.num }}</td>
         {% if i.is_finished %}
         <td style="background-color: #00db6a;">Is finished</td>
         {% else %}
